# TajMall

./: .env.example  .gitignore  DESIGN.md  PERFORMANCE_FIXES.md  PRODUCT.md  QUICK_START_AFTER_FIXES.md  README.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  prisma.config.ts  skills-lock.json  tailwind.config.ts  vercel.json
docs/: ACCOUNTING-REPORTS.md  ARCHITECTURE.md  BACKUP_AND_RESTORE.md  JOURNALS.md  SUPABASE_PASSWORD_RESET.md
prisma/: schema.prisma
public/: manifest.webmanifest  sw.js
scripts/: apply-migration-052.mjs  apply-migration-053.mjs  apply-migration-054.mjs  apply-migration-055.mjs  apply-migration-059.mjs  apply-migration-060.mjs  apply-migration-061.mjs  apply-migration-062.mjs  apply-migration-063.mjs  apply-migration-064.mjs  apply-migration-065.mjs  apply-migration-066.mjs  apply-missing-migrations.mjs  audit-rent-kpis.mjs  audit-supabase-remote.mjs  check-migrations-deep.mjs  check-migrations-status.mjs  clean-next.mjs  free-port.mjs  probe-rpcs.mjs  reset-user-password.mjs  restore-cold-backup.mjs  smoke-test-transactions.mjs  verify-accounting-remote.mjs  verify-exempt-client-logic.mjs  verify-exempt-summary.mjs  verify-migration-053.mjs  verify-party-contacts.mjs  verify-party-linking-status.mjs  verify-pdf-adaptive-money.mjs  verify-period-journal-contra.mjs  verify-tenant-rent-pdf.mjs  verify-tenant-rent-period.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/backup/: mod.rs
src/app/: error.tsx  (+5 more)
supabase/: README.md
(+403 files in other folders)
